fonctionnalité start diapo modifiée

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script src="js/MM1toMM2.min.js" defer></script>
     <script src="js/libs/vanilla-picker/vanilla-picker.min.js" defer></script>
 <!--<script src="dist/mathsmentales.bundle.js" id="mmscriptid"></script>-->
-    <script src="js/lib.mathsmentales.js?v=49" type="module" id="mmscriptid"></script>
+    <script src="js/lib.mathsmentales.js?v=50" type="module" id="mmscriptid"></script>
 
 </head>
 <body>
@@ -265,8 +265,8 @@
             <div id="paramsdiapo">
             <fieldset>
                 <legend>Introduction au diaporama</legend>
-                <span title="Commencer sur un exemple que l'on pourra discuter"><input type="radio" class="radio" name="beforeSlider" id="radiobeforeslider1" value="example"> Exemple</span>
-                <span title="Commener par un décompte 3...2...1..."><input type="radio" class="radio" name="beforeSlider" id="radiobeforeslider2" value="321" checked="true"> Décompte</span>
+                <span title="Commencer sur un exemple que l'on pourra discuter"><input type="checkbox" class="checkbox" name="beforeSlider" id="radiobeforeslider1" value="example"> Exemple</span>
+                <span title="Commencer par un décompte 3...2...1..."><input type="checkbox" class="checkbox" name="beforeSlider" id="radiobeforeslider2" value="321" checked="true"> Décompte</span>
                 <span title="Commencer directement"><input type="radio" class="radio" name="beforeSlider" id="radiobeforeslider3" value="nothing"> Rien</span>
             </fieldset>
             <fieldset class="lh2">
