--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script src="js/MM1toMM2.min.js" defer></script>
     <script src="js/libs/vanilla-picker/vanilla-picker.min.js" defer></script>
 <!--<script src="dist/mathsmentales.bundle.js" id="mmscriptid"></script>-->
-    <script src="js/lib.mathsmentales.js?v=52" type="module" id="mmscriptid"></script>
+    <script src="js/lib.mathsmentales.js?v=56" type="module" id="mmscriptid"></script>
 
 </head>
 <body>
@@ -88,6 +88,7 @@
             <a numero="#tab-telechargements" class="tabs-menu-link">Téléchargements</a>
             <a href="./cgu.html" class="tabs-menu-link">CGU</a>
             <a href="https://blog.mathsmentales.net" class="tabs-menu-link">Blog<span class="red">*</span></a>
+            <a href="about.html">À propos</a>
         </nav>
     </div>
 
@@ -100,10 +101,10 @@
             <!--<div class="fr jaiuncode"><input type="text" id="inputCode" placeholder="J'ai un code" size="10"><button id="btnCode" onclick="MM.takeOff()"><img src="img/iconfinder_takeoff.png"></button></div>-->
             <img src="img/logocm160x132.png" class="logoMM">
             <p>
-                <b>Automatismes et calcul mental</b> à données aléatoires sous forme de diaporamas, réponses en ligne, feuilles d'exercices, cartes flash, dominos, duels en ligne... (<a href="old/">ancienne version</a>)
+                <b>Automatismes et calcul mental</b> à données aléatoires sous forme de diaporamas, réponses en ligne, feuilles d'exercices, cartes flash, dominos, duels en ligne... (<a href="old/">ancienne version</a>) plus d'infos sur <a href="about.html">À propos</a>
              </p>
              <p>
-                 Dans Téléchargements : des fichers de <b>ceintures de calcul mental</b> à imprimer pour le collège.
+                 MathsMentales est un <a href="https://fr.wikipedia.org/wiki/Logiciel_libre"><b>logiciel libre</b></a> et gratuit sous <a href="https://raw.githubusercontent.com/seb-cogez/mathsmentales/master/LICENSE">licence Apache 2.0</a>.
              </p>
              <p><b>Contact</b> : <a href="mailto:contact@mathsmentales.net">contact@mathsmentales.net</a> pour signaler les problèmes, faire des suggestions...<br>
             <span class="green">Un bon CTRL + F5 peut aider lors d'un blocage</span>, mais pas toujours !</p>
