--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script src="js/MM1toMM2.min.js" defer></script>
     <script src="js/libs/vanilla-picker/vanilla-picker.min.js" defer></script>
 <!--<script src="dist/mathsmentales.bundle.js" id="mmscriptid"></script>-->
-    <script src="js/lib.mathsmentales.js?v=58" type="module" id="mmscriptid"></script>
+    <script src="js/lib.mathsmentales.js?v=60" type="module" id="mmscriptid"></script>
 
 </head>
 <body>
@@ -469,6 +469,12 @@
             <fieldset>
                 <legend>Titre de la page</legend>
                 <input type="text" placeholder="Je retiens les..." id="FCtitle">
+            </fieldset>
+            <fieldset>
+                <legend>Disposition</legend>
+                <input type="radio" class="radio" name="flashcarddispo" id="fcdispoboth" value="both" checked><label for="fcdispoboth">Recto à côté du verso</label><br>
+                <input type="radio" class="radio" name="flashcarddispo" id="fcdisposeparated" value="separated" checked><label for="fcdisposeparated">Page rectos/page versos</label><br><br>
+                <p>Réglages à faire pour l'impression...</p>
             </fieldset>
             <section>
                 <button class="button--primary beaubutton" id="btngenerateFC">Générer</button>
