amélioration cartes flash

--- a/cartesflash.html
+++ b/cartesflash.html
@@ -21,7 +21,7 @@
         <script src="js/libs/algebrite/algebrite.bundle-for-browser.min.js" type="text/javascript" defer></script>
         <script src="js/libs/bigjs/big.min.js" type="text/javascript" defer></script>
         <script src="js/libs/chartjs/Chart.bundle.min.js" defer></script>
-        <script type="module" src="js/lib.cartesflash.min.js"></script>
+        <script type="module" src="js/lib.cartesflash.js"></script>
     </head>  
     <body>
         <div id="creator-container">
