--- a/index.html
+++ b/index.html
@@ -478,6 +478,12 @@
             </fieldset>
             <section>
                 <button class="button--primary beaubutton" id="btngenerateFC">Générer</button>
+                <button class="button--inverse tooltip beaubutton" id="btn-flash-adresse">Adresse/QRCode
+                    <span class="tooltiptext">Copie l'adresse du<br>document dans<br>le presse papier</span>
+                </button>
+                <button class="button--success tooltip beaubutton" id="btn-flash-copytohistoric">→ Historique
+                    <span class="tooltiptext">Copie l'adresse du document<br>dans l'historique</span>
+                </button>
             </section>
         </div>
         <div id="paramswhogots" class="hidden">
