--- a/index.html
+++ b/index.html
@@ -295,7 +295,13 @@
             </fieldset>
             <br>
             <fieldset>
-                <legend>Fin de diaporama</legend>
+                <legend>Déroulé du diaporama (bientôt fonctionnel)</legend>
+                <input type="radio" class="radio" name="sliderContent" value="questions" checked="true" id="radioslidercontent1"><label for="radioslidercontent1">Questions uniquement</label><br>
+                <input type="radio" class="radio" name="sliderContent" value="qanda" id="radioslidercontent2"><label for="radioslidercontent2">Alerternance Questions/Réponses</label><br>
+                <input type="radio" class="radio" name="sliderContent" value="qthena" id="radioslidercontent3"><label for="radioslidercontent3">Questions, puis réponses</label>
+            </fieldset>
+            <fieldset>
+                <legend>Fin du diaporama</legend>
                 <input type="radio" class="radio" name="endOfSlideRadio" value="correction" checked="true" id="radioendslider1"><label for="radioendslider1">Correction</label>
                 <input type="radio" class="radio" name="endOfSlideRadio" value="nothing" id="radioendslider2"><label for="radioendslider2">Rien</label>
                 <input type="radio" class="radio" name="endOfSlideRadio" value="list"id="radioendslider3"><label for="radioendslider3">Énoncés</label>
