Maj de qques activités et petites corrections

--- a/cartesflash.html
+++ b/cartesflash.html
@@ -28,8 +28,9 @@
             <section id="creator-menu">
                 <button onclick="window.print();">Print</button> pour imprimer ou faire un pdf.
                 <button id="btnPageOrientation" title="Change l'orientation de la page">paysage</button>
-                <button id="btnRectoVerso" title="Change le type d'impression">Impression Recto</button>
-                Texte décoratif <input type="text" id="identifiant" size="15" placeholder="Multiplications...">
+                <button id="btnRectoVerso" title="Change le type d'impression">Recto</button>
+                Texte décoratif <input type="text" id="identifiant" size="15" title="Entrée pour valider" placeholder="Multiplications...">
+                <input type="color" id="inputcolorborder" title="Couleur de la bordure des réponses">
                 L<input id="inputwidth" value="55" title="Taille cartes" type="number" size="4" min="30" max="100">
                 H<input id="inputheight" value="55" title="Taille cartes" type="number" size="3" min="30" max="180"> mm
             </section>
